--- a/static/bootstrap/custom/_breadcrumbs.scss
+++ b/static/bootstrap/custom/_breadcrumbs.scss
@@ -20,6 +20,9 @@
         content: "\e62b";
         font-family: "icon-small";
       }
+	    span {
+		    display: none;
+	    }
     }
     +li:before {
       content: "#{$breadcrumb-separator}"; // Unicode space added since inline-block means non-collapsing white-space [\00a0]
@@ -29,17 +32,14 @@
       position: relative;
       top: -2px;
       padding-right: 4px;
-      padding-left: 4px;
     }
-
+	  &:last-child {
+		  color: $breadcrumb-active-color;
+	  }
     a {
 			color: $breadcrumb-color;
       font-size: 12px;
     }
-  }
-
-  > .active {
-    color: $breadcrumb-active-color;
   }
 }
 
@@ -47,15 +47,17 @@
   .breadcrumb {
     > li {
       font-size: 15px;
-      &:first-child:before {
-        font-size: 15px;
+	    &:first-child {
+		    &:before {
+			    font-size: 15px;
+		    }
       }
+	    &:last-child {
+		    font-size: 15px;
+	    }
       a {
         font-size: 15px;
       }
-    }
-    > .active {
-      font-size: 15px;
     }
   }
 }
