--- a/static/css/snwl-homepage.css
+++ b/static/css/snwl-homepage.css
@@ -2,17 +2,17 @@
 @charset "UTF-8";
 /* Trending Cards Images - ONLY CHANGE URLs and bg-position (if needed) */
   .trend-card-1{
-    background: url(/images/banner/seahawk/snwl-ransomware-card.jpg) no-repeat center center;
+    background: url("/images/banner/seahawk/snwl-ransomware-card.jpg") no-repeat center center;
     background-size: cover;
     background-position: right top;
   }
   .trend-card-2{
-    background: url(/images/banner/seahawk/snwl-capture-card.jpg) no-repeat center center;
+    background: url("/images/banner/seahawk/snwl-capture-card.jpg") no-repeat center center;
     background-size: cover;
   /* background-position: right top; */ 
   }
   .trend-card-3{
-    background: url(/images/banner/seahawk/Multiple-exposure-with-business-and-night-cityscape-000080696529_XXXLarge.jpg) no-repeat center center;
+    background: url("/images/banner/seahawk/Multiple-exposure-with-business-and-night-cityscape-000080696529_XXXLarge.jpg") no-repeat center center;
     background-size: cover;
   /* background-position: right top; */
   }
