--- a/static/css/new-brand-snwl.css
+++ b/static/css/new-brand-snwl.css
@@ -30,7 +30,7 @@ color: #005D84;
 color: #e2642c;
 }
 .masthead .navbar-brand {
-margin: 20px 20px 0 15px;
+margin: 21px 20px 0 15px;
 }
 .shadow-overlay-left{
 display: none !important;
@@ -149,8 +149,7 @@ body {
 font-family: Calibri,Candara,Segoe,"Segoe UI",Optima,"Helvetica Neue","Meiryo UI Reg","MS UI Gothic Reg","Hiragino Kaku Gothic Reg","Microsoft YaHei","Hiragino Sans GB","Microsoft JhengHei","Malgun Gothic",Gulim,Tahoma,"Arial Unicode",sans-serif;
 }
 h1,h2,h3,h4,h5,h6 {
-font-family: Avenir,Calibri,Candara,Segoe,"Segoe UI",Optima,"Helvetica Neue","Meiryo UI Reg","MS UI Gothic Reg","Hiragino Kaku Gothic Reg","Microsoft YaHei","Hiragino Sans GB","Microsoft JhengHei","Malgun Gothic",Gulim,Tahoma,"Arial Unicode",sans-serif;
-font-weight: 100;
+font-family: Calibri,Candara,Segoe,"Segoe UI",Optima,"Helvetica Neue","Meiryo UI Reg","MS UI Gothic Reg","Hiragino Kaku Gothic Reg","Microsoft YaHei","Hiragino Sans GB","Microsoft JhengHei","Malgun Gothic",Gulim,Tahoma,"Arial Unicode",sans-serif;
 }
 /*Misc Styling*/
 #PageNotFoundAnchor{
