--- a/static/styles/bootstrap-quest-v1.scss
+++ b/static/styles/bootstrap-quest-v1.scss
@@ -1,7 +1,7 @@
 // Core variables and mixins
-@import "../bootstrap/custom/quest/_variables";
-@import "../bootstrap/partials/_mixins";
-@import "../bootstrap/custom/_font-face";
+@import "../bootstrap/custom/quest/variables";
+@import "../bootstrap/partials/mixins";
+@import "../bootstrap/custom/font-face";
 
 @-ms-viewport {
 	width: device-width;
@@ -25,47 +25,47 @@ body {
 	line-height: 1.42857;
 
 	// Reset and dependencies
-	@import "../bootstrap/custom/_normalize";
-	@import "../bootstrap/partials/_print";
-	@import "../bootstrap/custom/_glyphicons";
+	@import "../bootstrap/custom/normalize";
+	@import "../bootstrap/partials/print";
+	@import "../bootstrap/custom/glyphicons";
 
 	// Core CSS
-	@import "../bootstrap/partials/_scaffolding";
-	@import "../bootstrap/custom/_type";
-	@import "../bootstrap/partials/_code";
-	@import "../bootstrap/custom/_grid-dsg";
+	@import "../bootstrap/partials/scaffolding";
+	@import "../bootstrap/custom/type";
+	@import "../bootstrap/partials/code";
+	@import "../bootstrap/custom/grid-dsg";
 	//@import "bootstrap/grid";
-	@import "../bootstrap/custom/_custom-grid-ext";
-	@import "../bootstrap/partials/_tables";
-	@import "../bootstrap/custom/_forms";
-	@import "../bootstrap/custom/_buttons";
+	@import "../bootstrap/custom/custom-grid-ext";
+	@import "../bootstrap/partials/tables";
+	@import "../bootstrap/custom/forms";
+	@import "../bootstrap/custom/buttons";
 
 	// Components
-	@import "../bootstrap/partials/_component-animations";
-	@import "../bootstrap/partials/_dropdowns";
-	@import "../bootstrap/partials/_button-groups";
-	@import "../bootstrap/partials/_input-groups";
-	@import "../bootstrap/partials/_navs";
-	@import "../bootstrap/partials/_navbar";
-	@import "../bootstrap/custom/_breadcrumbs";
-	@import "../bootstrap/partials/_pagination";
-	@import "../bootstrap/partials/_pager";
-	@import "../bootstrap/partials/_labels";
-	@import "../bootstrap/partials/_badges";
+	@import "../bootstrap/partials/component-animations";
+	@import "../bootstrap/partials/dropdowns";
+	@import "../bootstrap/partials/button-groups";
+	@import "../bootstrap/partials/input-groups";
+	@import "../bootstrap/partials/navs";
+	@import "../bootstrap/partials/navbar";
+	@import "../bootstrap/custom/breadcrumbs";
+	@import "../bootstrap/partials/pagination";
+	@import "../bootstrap/partials/pager";
+	@import "../bootstrap/partials/labels";
+	@import "../bootstrap/partials/badges";
 	/*@import "bootstrap/jumbotron";*/
-	@import "../bootstrap/partials/_thumbnails";
+	@import "../bootstrap/partials/thumbnails";
 	@import "../bootstrap/partials/alerts";
 	/*@import "bootstrap/progress-bars";*/
-	@import "../bootstrap/partials/_media";
-	@import "../bootstrap/partials/_list-group";
-	@import "../bootstrap/partials/_panels";
-	@import "../bootstrap/partials/_responsive-embed";
+	@import "../bootstrap/partials/media";
+	@import "../bootstrap/partials/list-group";
+	@import "../bootstrap/partials/panels";
+	@import "../bootstrap/partials/responsive-embed";
 	/*@import "bootstrap/wells";*/
-	@import "../bootstrap/partials/_close";
+	@import "../bootstrap/partials/close";
 	@import "../bootstrap/custom/text";
 
-	@import "../bootstrap/custom/dsg/_dell-icons";
-	@import "../bootstrap/custom/quest/_custom-header-footer-quest-v1";
+	@import "../bootstrap/custom/dsg/dell-icons";
+	@import "../bootstrap/custom/quest/custom-header-footer-quest-v1";
 	@import "../bootstrap/custom/image";
 	@import "../bootstrap/widgets/banner";
 	@import "../bootstrap/widgets/slick";
@@ -74,15 +74,15 @@ body {
 	/*@import "bootstrap/modals";*/
 	@import "../bootstrap/custom/tooltip";
 	/*@import "bootstrap/popovers";*/
-	@import "../bootstrap/widgets/_hero-banner";
+	@import "../bootstrap/widgets/hero-banner";
 
 	// Utility classes
-	@import "../bootstrap/partials/_utilities";
-	@import "../bootstrap/custom/_responsive-utilities-dsg";
+	@import "../bootstrap/partials/utilities";
+	@import "../bootstrap/custom/responsive-utilities-dsg";
 
-	@import "../bootstrap/custom/_custom";
+	@import "../bootstrap/custom/custom";
 	@import "../bootstrap/custom/margin-padding";
-	@import "../bootstrap/custom/_custom-affix-scroll-nav-top";
+	@import "../bootstrap/custom/custom-affix-scroll-nav-top";
 
 	&.not-responsive {
 
@@ -134,8 +134,8 @@ body {
 	}
 }
 
-@import "../bootstrap/custom/_fancybox";
-@import "../bootstrap/custom/_image";
+@import "../bootstrap/custom/fancybox";
+@import "../bootstrap/custom/image";
 @import "../bootstrap/custom/countries";
 
 @media (max-width: 767px) {
