Modified footer link list padding to fix issue with some localities (br-pt, fr-fr and de-de) in tablet portrait mode. Test URLs: http://www-quest-com/br-pt/ http://www-quest-com/fr-fr/ http://www-quest-com/de-de/ Update: [Siamak] Had to reduce the padding in br-pt and fr-fr
Change-Id: Ifdec4320d2f9b406eebc12f03a05bcd019b34948

--- a/static/bootstrap/custom/quest/_header-footer.scss
+++ b/static/bootstrap/custom/quest/_header-footer.scss
@@ -897,6 +897,24 @@ i.menu-indicator {
 			float: right;
 		}
 	}
+	.br-pt, .fr-fr {
+		.footer-top-section {
+			li {
+				&.subLinks {
+					padding-right: 4% !important;
+				}
+			}
+		}
+	}
+	.de-de {
+		.footer-top-section {
+			li {
+				&.subLinks {
+					padding-right: 3% !important;
+				}
+			}
+		}
+	}
 }
 
 //tablet and desktop mode
