Modified footer link list padding to fix issue with some localities (br-pt, fr-fr and de-de) in tablet portrait mode. Test URLs: http://www-quest-com/br-pt/ http://www-quest-com/fr-fr/ http://www-quest-com/de-de/
Change-Id: I9530ad67f36c29ea13276d023ca061a5745a7091

--- a/static/bootstrap/custom/quest/_header-footer.scss
+++ b/static/bootstrap/custom/quest/_header-footer.scss
@@ -897,6 +897,24 @@ i.menu-indicator {
 			float: right;
 		}
 	}
+	.br-pt, .fr-fr {
+		.footer-top-section {
+			li {
+				&.subLinks {
+					padding-right: 5%;
+				}
+			}
+		}
+	}
+	.de-de {
+		.footer-top-section {
+			li {
+				&.subLinks {
+					padding-right: 3%;
+				}
+			}
+		}
+	}
 }
 
 //tablet and desktop mode
